Upgraded to v0.6-SNAPSHOT